[package]
name = "sif_async_test"
version = "0.1.0"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"

[dependencies]
shalrath = { path = "../shalrath" }
ogre = { path = "../ogre" }
png = "0.16.8"
nom = "6.1.2"
futures = "0.3.14"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]